--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,12 @@
-worker_process 1;
+worker_processes 1;
 # this is the number of worker processes represent
     # 1. the value is the number of worker processes Nginx should create 
     # 2. Each worker process runs independently and can handle its own set of connections
 
 # this configuration directly influences how well it can handle traffic
-    # should be tuned according to the servers hardware and exoected traffic load
+    # should be tuned according to the servers hardware and expected traffic load
 
-# in somes cases, its auto => nginx automatically detets the number of CPu cores available on the server and starts a corresponding number of worker nodes
+# in some cases, its auto => nginx automatically detects the number of CPU cores available on the server and starts a corresponding number of worker nodes
 
 events {
     worker_connections 1024;
@@ -18,28 +18,42 @@ events {
     # 3. Better performance as per handling traffic but also increases the memory usage
 
 http {
+    include mime.types;
 
     upstream nodejs_cluster {
+        least_conn; # load balancing algorithm => request sent to the server with the least number of active connections 
         server 127.0.0.1:3001;
         server 127.0.0.1:3002;
         server 127.0.0.1:3003;
     }
 
     server {
-        listen 8080;
+        # listen 8080; # default port for http requests
+        listen 443 ssl; # default port for https requests
         server_name localhost;
+
+        ssl_certificate C:/Users/tusha/OneDrive/Desktop/NGINX-introduction/nginx_certs/nginx-selfsigned.crt;
+        ssl_certificate_key C:/Users/tusha/OneDrive/Desktop/NGINX-introduction/nginx_certs/nginx-selfsigned.key;
 
         location / {
             proxy_pass http://nodejs_cluster;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
+
+        location = /favicon.ico {
+            log_not_found off;
+            access_log off;
+        }
+
     }
 }
 
-# http = configuratoin specific to the HTTP and affecting all virtual servers
+# http = configuration specific to the HTTP and affecting all virtual servers
     # 1. server block
         # defines how Nginx should handle requests for a particular domain or IP address
             # how to listen for connections
-            # which dmain or subdomain the configuration applies to
+            # which domain or subdomain the configuration applies to
             # how to route the requests
     
         # listen: the port number that Nginx should listen on
@@ -57,6 +71,11 @@ http {
             # defines a group of backend servers that will handle requests forwarded by nginx
             # refers to servers that nginx forwards requests to
             # upstream name is based on the flow of data
-            # "upstream servers" = refers to traffic going from a client towards the source or higher level infra, in this xase application server
+            # "upstream servers" = refers to traffic going from a client towards the source or higher level infra, in this case application server
             # "downstream servers" = refers to traffic going from the source or higher level infra towards the client
 
+# when nginx acts as a reverse proxy, the requests coming to the backend servers originate from nginx, not directly from the client.
+# as a result, backend servers would see the IP address of the Nginx server as the source of requests, not the client's IP address
+
+# we need to tell nginx to include the corresponding MIME types in the "content type" response header, when sending a file
+# this helps the client understand how to process or render a file
