http to https redireaction done

--- a/nginx.conf
+++ b/nginx.conf
@@ -47,6 +47,15 @@ http {
         }
 
     }
+
+        server {
+        listen 8080;
+        server_name localhost;
+
+        location / {
+            return 301 https://$host$request_uri; # redirecting http requests to https
+        }
+    }
 }
 
 # http = configuration specific to the HTTP and affecting all virtual servers
